infrastructure/vault/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    app: vault
