infrastructure/vault/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: vault
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      serviceAccountName: vault
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: vault
          image: docker.io/hashicorp/vault:1.15
          command:
            - "/bin/sh"
            - "-c"
          args:
            - |
              mkdir -p /home/vault/data
              vault server -config=/vault/config/vault-config.hcl
          ports:
            - containerPort: 8200
              name: vault-port
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: vault-config
              mountPath: /vault/config
            - name: vault-data
              mountPath: /home/vault/data
          readinessProbe:
            httpGet:
              path: /v1/sys/health?standbyok=true&uninitcode=200&sealedcode=200
              port: 8200
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /v1/sys/health?standbyok=true&uninitcode=200&sealedcode=200
              port: 8200
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: vault-config
          configMap:
            name: vault-config
        - name: vault-data
          persistentVolumeClaim:
            claimName: vault-data
