infrastructure/vault/06-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault
  namespace: vault
  labels:
    app: vault
spec:
  to:
    kind: Service
    name: vault
    weight: 100
  port:
    targetPort: vault
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
